--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-winston": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
-    "validator": "^12.1.0"
+    "validator": "^12.1.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
